// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioOption /> should render RenderCheckbox component properly 1`] = `
<div>
  <div>
    <p>
      Enter Option undefined
    </p>
    <div
      className="prompt-item"
    >
      <input
        className="prompt-input"
        id="option-name-input"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Yes"
        type="text"
        value="are you serious?"
      />
      <DeleteIcon
        id="option-del-icon"
        onClick={[Function]}
      />
    </div>
    <div
      className="behaviour-container"
    >
      <div
        className="set-behaviour-btn-container"
      >
        <button
          className="set-behaviour-btn"
          onClick={[Function]}
          type="button"
        >
          Set behaviour
        </button>
      </div>
      <div>
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`<RadioOption /> should render RenderCheckbox component properly 2`] = `
<div>
  <div>
    <p>
      Enter Option undefined
    </p>
    <div
      className="prompt-item"
    >
      <input
        className="prompt-input"
        id="option-name-input"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Yes"
        type="text"
        value="are you serious?"
      />
      <button
        className="builder-delete-icon"
        id="option-del-icon"
        onClick={[Function]}
        type="button"
      >
        <img
          alt="delete-icon"
          src="delete-icon.svg"
        />
      </button>
    </div>
    <div
      className="behaviour-container"
    >
      <div
        className="set-behaviour-btn-container"
      >
        <button
          className="set-behaviour-btn"
          onClick={[Function]}
          type="button"
        >
          Set behaviour
        </button>
      </div>
      <div>
        <div />
      </div>
    </div>
  </div>
</div>
`;
